--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
 		"@storybook/addon-links": "^6.4.19",
 		"@storybook/builder-webpack5": "^6.4.19",
 		"@storybook/html": "^6.4.19",
-		"@storybook/manager-webpack5": "^6.4.19"
+		"@storybook/manager-webpack5": "^6.4.19",
+		"pug": "^2.0.4",
+		"pug-runtime": "^3.0.1",
+		"storypug": "^1.0.0-rc.8"
 	}
 }
