--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"css-loader": "^6.5.1",
 		"css-minimizer-webpack-plugin": "^3.3.1",
 		"file-loader": "^6.2.0",
+		"globule": "^1.3.3",
 		"html-loader": "^3.0.1",
 		"html-webpack-plugin": "^5.5.0",
 		"image-webpack-loader": "^8.0.1",
