--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 	"scripts": {
 		"start": "webpack serve --mode development",
 		"build": "webpack --mode production",
-		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook"
+		"deploy": "npm run build && gh-pages -d build"
 	},
 	"author": "",
 	"license": "ISC",
@@ -25,6 +24,7 @@
 		"css-loader": "^6.5.1",
 		"css-minimizer-webpack-plugin": "^3.3.1",
 		"file-loader": "^6.2.0",
+		"gh-pages": "^4.0.0",
 		"globule": "^1.3.3",
 		"html-loader": "^3.0.1",
 		"html-webpack-plugin": "^5.5.0",
